[project]
name = "roller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse>=1.6.3",
    "bytecode>=0.16.1",
    "cloudpickle>=3.1.1",
    "cupy-cuda12x>=13.4.0",
    "einspect>=0.5.16",
    "humanize>=4.12.3",
    "matplotlib>=3.10.5",
    "onnx>=1.17.0",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "setuptools>=76.0.0",
]
